Language completion and advancements fix

--- a/common/src/main/resources/assets/underthestars/lang/en_us.json
+++ b/common/src/main/resources/assets/underthestars/lang/en_us.json
@@ -10,6 +10,38 @@
   "item.underthestars.wrapped_chocolate_bar": "Chocolate Bar",
   "item.underthestars.chocolate_piece": "Chocolate Piece",
   "block.underthestars.white_sleeping_bag": "White Sleeping Bag",
+  "block.underthestars.light_gray_sleeping_bag": "Light Gray Sleeping Bag",
+  "block.underthestars.gray_sleeping_bag": "Gray Sleeping Bag",
+  "block.underthestars.black_sleeping_bag": "Black Sleeping Bag",
+  "block.underthestars.brown_sleeping_bag": "Brown Sleeping Bag",
+  "block.underthestars.red_sleeping_bag": "Red Sleeping Bag",
+  "block.underthestars.orange_sleeping_bag": "Orange Sleeping Bag",
+  "block.underthestars.yellow_sleeping_bag": "Yellow Sleeping Bag",
+  "block.underthestars.lime_sleeping_bag": "Lime Sleeping Bag",
+  "block.underthestars.green_sleeping_bag": "Green Sleeping Bag",
+  "block.underthestars.cyan_sleeping_bag": "Cyan Sleeping Bag",
+  "block.underthestars.light_blue_sleeping_bag": "Light Blue Sleeping Bag",
+  "block.underthestars.blue_sleeping_bag": "Blue Sleeping Bag",
+  "block.underthestars.purple_sleeping_bag": "Purple Sleeping Bag",
+  "block.underthestars.magenta_sleeping_bag": "Magenta Sleeping Bag",
+  "block.underthestars.pink_sleeping_bag": "Pink Sleeping Bag",
+  "block.underthestars.hollow_oak_log": "Hollow Oak Log",
+  "block.underthestars.hollow_spruce_log": "Hollow Spruce Log",
+  "block.underthestars.hollow_birch_log": "Hollow Birch Log",
+  "block.underthestars.hollow_jungle_log": "Hollow Jungle Log",
+  "block.underthestars.hollow_acacia_log": "Hollow Acacia Log",
+  "block.underthestars.hollow_dark_oak_log": "Hollow Dark Oak Log",
+  "block.underthestars.hollow_mangrove_log": "Hollow Mangrove Log",
+  "block.underthestars.hollow_cherry_log": "Hollow Cherry Log",
+  "block.underthestars.stripped_hollow_oak_log": "Hollow Oak Log",
+  "block.underthestars.stripped_hollow_spruce_log": "Stripped Hollow Spruce Log",
+  "block.underthestars.stripped_hollow_birch_log": "Stripped Hollow Birch Log",
+  "block.underthestars.stripped_hollow_jungle_log": "Stripped Hollow Jungle Log",
+  "block.underthestars.stripped_hollow_acacia_log": "Stripped Hollow Acacia Log",
+  "block.underthestars.stripped_hollow_dark_oak_log": "Stripped Hollow Dark Oak Log",
+  "block.underthestars.stripped_hollow_mangrove_log": "Stripped Hollow Mangrove Log",
+  "block.underthestars.stripped_hollow_cherry_log": "Stripped Hollow Cherry Log",
+  "block.underthestars.white_tent": "Tent",
   "advancements.underthestars.eat_kelp_gelatin.title": "Tastes Like Bones",
   "advancements.underthestars.eat_kelp_gelatin.descr": "Eat some Kelp Gelatin",
   "advancements.underthestars.marshmallow.title": "Squishy!",
@@ -24,10 +56,12 @@
   "advancements.underthestars.chocolate_bar.descr": "Make a Chocolate Bar",
   "advancements.underthestars.biscuit.title": "Oi Bruv, Pretty Neat Innit?",
   "advancements.underthestars.biscuit.descr": "Make some Biscuits",
-  "advancements.underthestars.smore.title": "A Scout's Favorite",
+  "advancements.underthestars.smore.title": "Scout's Favorite",
   "advancements.underthestars.smore.descr": "Make and eat a smore",
   "advancement.underthestars.stargazing.title": "Stargazing",
   "advancement.underthestars.stargazing.descr": "Look up and see the stars on the night sky",
+  "advancement.underthestars.campfire.title": "Healing Warmth",
+  "advancement.underthestars.campfire.descr": "Place down a campfire",
   "advancement.underthestars.sleeping_bag.title": "Snoozing Away",
   "advancement.underthestars.sleeping_bag.descr": "Sleep in a Sleeping bag"
 }
