Chocolate fully implemented, just needs new textures

--- a/common/src/main/resources/assets/underthestars/lang/en_us.json
+++ b/common/src/main/resources/assets/underthestars/lang/en_us.json
@@ -57,11 +57,11 @@
   "advancements.underthestars.biscuit.title": "Oi Bruv, Pretty Neat Innit?",
   "advancements.underthestars.biscuit.descr": "Make some Biscuits",
   "advancements.underthestars.smore.title": "Scout's Favorite",
-  "advancements.underthestars.smore.descr": "Make and eat a smore",
+  "advancements.underthestars.smore.descr": "Make and eat a Smore",
   "advancement.underthestars.stargazing.title": "Stargazing",
   "advancement.underthestars.stargazing.descr": "Look up and see the stars on the night sky",
   "advancement.underthestars.campfire.title": "Healing Warmth",
-  "advancement.underthestars.campfire.descr": "Place down a campfire",
+  "advancement.underthestars.campfire.descr": "Place down a Campfire",
   "advancement.underthestars.sleeping_bag.title": "Snoozing Away",
   "advancement.underthestars.sleeping_bag.descr": "Sleep in a Sleeping bag"
 }
