Biscuit implemented, gonna do smore later, added placeholder textures

--- a/common/src/main/resources/assets/underthestars/lang/en_us.json
+++ b/common/src/main/resources/assets/underthestars/lang/en_us.json
@@ -9,6 +9,8 @@
   "item.underthestars.open_chocolate_bar": "Chocolate Bar",
   "item.underthestars.wrapped_chocolate_bar": "Chocolate Bar",
   "item.underthestars.chocolate_piece": "Chocolate Piece",
+  "item.underthestars.biscuit": "Biscuit",
+  "block.underthestars.smore": "Smore",
   "block.underthestars.white_sleeping_bag": "White Sleeping Bag",
   "block.underthestars.light_gray_sleeping_bag": "Light Gray Sleeping Bag",
   "block.underthestars.gray_sleeping_bag": "Gray Sleeping Bag",
