Created smores, created basic Sugar Rush effect (need more work)

--- a/common/src/main/resources/assets/underthestars/lang/en_us.json
+++ b/common/src/main/resources/assets/underthestars/lang/en_us.json
@@ -44,6 +44,7 @@
   "block.underthestars.stripped_hollow_mangrove_log": "Stripped Hollow Mangrove Log",
   "block.underthestars.stripped_hollow_cherry_log": "Stripped Hollow Cherry Log",
   "block.underthestars.white_tent": "Tent",
+  "effect.underthestars.sugar_rush": "Sugar Rush",
   "advancements.underthestars.get_kelp.title": "Kelp Calm And Carry On",
   "advancements.underthestars.get_kelp.descr": "Get Kelp from the ocean",
   "advancements.underthestars.eat_kelp_gelatin.title": "Tastes Like Bones",
