--- a/common/src/main/resources/assets/underthestars/lang/en_us.json
+++ b/common/src/main/resources/assets/underthestars/lang/en_us.json
@@ -45,7 +45,7 @@
   "block.underthestars.stripped_hollow_cherry_log": "Stripped Hollow Cherry Log",
   "block.underthestars.white_tent": "Tent",
   "effect.underthestars.sugar_rush": "Sugar Rush",
-  "message.underthestars.sugar_rush_insomnia": "You can't sleep now, you have too much energy",
+  "message.underthestars.sugar_rush_insomnia": "You can't sleep now; you have too much energy",
   "advancements.underthestars.get_kelp.title": "Kelp Calm And Carry On",
   "advancements.underthestars.get_kelp.descr": "Get Kelp from the ocean",
   "advancements.underthestars.eat_kelp_gelatin.title": "Tastes Like Bones",
