More 3D item models, new advancement, burned marshmallow, VERY cleaned up ItemRendererMixin, easter egg adv for a certain vtuber that is bad at cooking

--- a/common/src/main/resources/assets/underthestars/lang/en_us.json
+++ b/common/src/main/resources/assets/underthestars/lang/en_us.json
@@ -5,11 +5,13 @@
   "item.underthestars.marshmallow_on_a_stick": "Marshmallow on a Stick",
   "item.underthestars.cooked_marshmallow": "Cooked Marshmallow",
   "item.underthestars.cooked_marshmallow_on_a_stick": "Cooked Marshmallow on a Stick",
+  "item.underthestars.burned_marshmallow": "Burned Marshmallow",
+  "item.underthestars.burned_marshmallow_on_a_stick": "Burned Marshmallow on a Stick",
+  "item.underthestars.biscuit": "Biscuit",
   "item.underthestars.chocolate_bar": "Chocolate Bar",
   "item.underthestars.open_chocolate_bar": "Chocolate Bar",
   "item.underthestars.wrapped_chocolate_bar": "Chocolate Bar",
   "item.underthestars.chocolate_piece": "Chocolate Piece",
-  "item.underthestars.biscuit": "Biscuit",
   "block.underthestars.smore": "Smore",
   "block.underthestars.white_sleeping_bag": "White Sleeping Bag",
   "block.underthestars.light_gray_sleeping_bag": "Light Gray Sleeping Bag",
@@ -44,8 +46,6 @@
   "block.underthestars.stripped_hollow_mangrove_log": "Stripped Hollow Mangrove Log",
   "block.underthestars.stripped_hollow_cherry_log": "Stripped Hollow Cherry Log",
   "block.underthestars.white_tent": "Tent",
-  "effect.underthestars.sugar_rush": "Sugar Rush",
-  "message.underthestars.sugar_rush_insomnia": "You can't sleep now; you have too much energy",
   "advancements.underthestars.get_kelp.title": "Kelp Calm And Carry On",
   "advancements.underthestars.get_kelp.descr": "Get Kelp from the ocean",
   "advancements.underthestars.eat_kelp_gelatin.title": "Tastes Like Bones",
@@ -56,6 +56,8 @@
   "advancements.underthestars.cooked_marshmallow.descr": "Cook a Marshmallow",
   "advancements.underthestars.cooked_marshmallow_on_a_stick.title": "Camp Cooking",
   "advancements.underthestars.cooked_marshmallow_on_a_stick.descr": "Cook a Marshmallow on a Stick",
+  "advancements.underthestars.burned_marshmallow_or_on_stick.title": "Yeah... No...",
+  "advancements.underthestars.burned_marshmallow_or_on_stick.descr": "I think you overcooked it man :/",
   "advancements.underthestars.cocoa_beans.title": "Bean There, Done That",
   "advancements.underthestars.cocoa_beans.descr": "Collect some Cocoa Beans",
   "advancements.underthestars.chocolate_bar.title": "Pure Imagination",
@@ -71,5 +73,7 @@
   "advancement.underthestars.campfire.title": "Healing Warmth",
   "advancement.underthestars.campfire.descr": "Place down a Campfire",
   "advancement.underthestars.sleeping_bag.title": "Snoozing Away",
-  "advancement.underthestars.sleeping_bag.descr": "Skip the night tucked in a Sleeping Bag"
+  "advancement.underthestars.sleeping_bag.descr": "Skip the night tucked in a Sleeping Bag",
+  "effect.underthestars.sugar_rush": "Sugar Rush",
+  "message.underthestars.sugar_rush_insomnia": "You can't sleep now; you have too much energy"
 }
